--- a/front-end/src/styles/variables.scss
+++ b/front-end/src/styles/variables.scss
@@ -2,3 +2,20 @@ $transition-time: 0.8s;
 
 $small-border-radius: 1rem;
 $big-border-radius: 2rem;
+
+$c-light-white: #FFFFFF;
+$c-light-main-text: #212529;
+$c-light-menu-inactive-link: #75819C;
+$c-light-accent: #848ED9; 
+$c-light-level-basic: #FFEBF5;
+$c-light-level-intermediate: #D5E9EC;
+$c-light-level-advanced: #E3F6DE;
+$c-light-block-bg: #FAFAFA;
+$c-light-input-border: #D9D9D9;
+
+$bg-light-footer-gradient: linear-gradient(0deg, #F0EFFC 0%, rgba(240, 239, 252, 0) 56%);
+$bg-light-header-gradient: linear-gradient(180deg, #F0EFFC 0%, rgba(240, 239, 252, 0) 100%);
+
+$fw-regular: 400;
+$fw-bold: 700;
+$fw-extrabold: 800;
