--- a/front-end/src/styles/mixins.scss
+++ b/front-end/src/styles/mixins.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './themes.scss';
 
 @mixin interaction-effects {
   cursor: pointer;
@@ -9,6 +10,15 @@
   }
 }
 
+@mixin tablet {
+  @media (max-width: 899px) { @content; }
+}
+
+@mixin mobile {
+  @media (max-width: 599px) { @content; }
+}
+
+
 @mixin button {
   width: 24rem;
   height: 5rem;
@@ -17,8 +27,8 @@
   font-size: 2rem;
   font-weight: $fw-bold; 
 
-  color: $c-light-white;
-  background-color: $c-light-accent;
+  color: white;
+  background-color: $c-accent;
 }
 
 @mixin font-main {
