--- a/front-end/src/styles/themes.scss
+++ b/front-end/src/styles/themes.scss
@@ -28,6 +28,10 @@ body.light {
   --bg-home-lessons: url(./../assets/images/background/home/home-lessons-light.svg);
   --bg-home-games: url(./../assets/images/background/home/home-games-light.svg);
   --bg-home-progress: url(./../assets/images/background/home/home-progress-light.svg);
+  --bg-home-bg-wave: url(./../assets/images/background/home/home-wave.svg);
+  --bg-home-bg-1: url(./../assets/images/background/home/home-bg-1-light.svg);
+  --bg-home-bg-2: url(./../assets/images/background/home/home-bg-2-light.svg);
+  --bg-home-bg-3: url(./../assets/images/background/home/home-bg-3-light.svg);
   --bg-lessons-easy: url(./../assets/images/background/lessons/lessons-easy-light.svg);
   --bg-lessons-medium: url(./../assets/images/background/lessons/lessons-medium-light.svg);
   --bg-lessons-hard: url(./../assets/images/background/lessons/lessons-hard-light.svg);
@@ -66,6 +70,10 @@ body.dark {
   --bg-home-lessons: url(./../assets/images/background/home/home-lessons-dark.svg);
   --bg-home-games: url(./../assets/images/background/home/home-games-dark.svg);
   --bg-home-progress: url(./../assets/images/background/home/home-progress-dark.svg);
+  --bg-home-bg-wave: url(./../assets/images/background/home/home-wave.svg);
+  --bg-home-bg-1: url(./../assets/images/background/home/home-bg-1-dark.svg);
+  --bg-home-bg-2: url(./../assets/images/background/home/home-bg-2-dark.svg);
+  --bg-home-bg-3: url(./../assets/images/background/home/home-bg-3-dark.svg);
   --bg-lessons-easy: url(./../assets/images/background/lessons/lessons-easy-dark.svg);
   --bg-lessons-medium: url(./../assets/images/background/lessons/lessons-medium-dark.svg);
   --bg-lessons-hard: url(./../assets/images/background/lessons/lessons-hard-dark.svg);
@@ -103,6 +111,10 @@ $bg-home-promo: var(--bg-home-promo);
 $bg-home-lessons: var(--bg-home-lessons);
 $bg-home-games: var(--bg-home-games);
 $bg-home-progress: var(--bg-home-progress);
+$bg-home-bg-wave: var(--bg-home-bg-wave);
+$bg-home-bg-1: var(--bg-home-bg-1);
+$bg-home-bg-2: var(--bg-home-bg-2);
+$bg-home-bg-3: var(--bg-home-bg-3);
 $bg-lessons-easy: var(--bg-level-easy);
 $bg-lessons-medium: var(--bg-level-medium);
 $bg-lessons-hard: var(--bg-lessons-hard);
