--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,2 +1,5 @@
 @import './styles/reset.scss';
 @import './styles/fonts.scss';
+@import './styles/themes.scss';
+@import './styles/variables.scss';
+@import './styles/mixins.scss';
