refactor: add icon variables for different themes

--- a/front-end/src/styles/themes.scss
+++ b/front-end/src/styles/themes.scss
@@ -40,6 +40,13 @@ body.light {
   --bg-lessons-fact: url(./../assets/images/background/lessons/lessons-facts-light.svg);
   --bg-lessons-ru: url(./../assets/images/background/lessons/lessons-ru.svg);
   --bg-lessons-en: url(./../assets/images/background/lessons/lessons-eng.svg);
+  --bg-profile-close: url(./../assets/images/background/icons/icon-close-light.svg);
+  --bg-profile-edit: url(./../assets/images/background/icons/icon-edit-light.svg);
+  --bg-modal-password-open: url(./../assets/images/background/icons/icon-password-open-light.svg);
+  --bg-modal-password-closed: url(./../assets/images/background/icons/icon-password-closed-light.svg);
+  --bg-lessons-star: url(./../assets/images/background/icons/icon-star-light.svg);
+  --bg-arrow-left: url(./../assets/images/background/icons/icon-arrow-left-light.svg);
+  --bg-arrow-right: url(./../assets/images/background/icons/icon-arrow-right-light.svg);
 }
 
 body.dark {
@@ -84,6 +91,13 @@ body.dark {
   --bg-lessons-fact: url(./../assets/images/background/lessons/lessons-facts-dark.svg);
   --bg-lessons-ru: url(./../assets/images/background/lessons/lessons-ru.svg);
   --bg-lessons-en: url(./../assets/images/background/lessons/lessons-eng.svg);
+  --bg-close: url(./../assets/images/background/icons/icon-close-dark.svg);
+  --bg-profile-edit: url(./../assets/images/background/icons/icon-edit-dark.svg);
+  --bg-modal-password-open: url(./../assets/images/background/icons/icon-password-open-dark.svg);
+  --bg-modal-password-closed: url(./../assets/images/background/icons/icon-password-closed-dark.svg);
+  --bg-lessons-star: url(./../assets/images/background/icons/icon-star-dark.svg);
+  --bg-arrow-left: url(./../assets/images/background/icons/icon-arrow-left-dark.svg);
+  --bg-arrow-right: url(./../assets/images/background/icons/icon-arrow-right-dark.svg);
 }
 
 $c-body-bg: var(--c-body-bg); 
@@ -127,3 +141,10 @@ $bg-lessons-hard: var(--bg-lessons-hard);
 $bg-lessons-fact: var(--bg-lessons-fact);
 $bg-lessons-ru: var(--bg-lessons-ru);
 $bg-lessons-en: var(--bg-lessons-en);
+$bg-close: var(--bg-close);
+$bg-profile-edit: var(--bg-profile-edit);
+$bg-modal-password-open: var(--bg-modal-password-open);
+$bg-modal-password-closed: var(--bg-modal-password-closed);
+$bg-lessons-star: var(--bg-lessons-star);
+$bg-arrow-left: var(--bg-arrow-left);
+$bg-arrow-right: var(--bg-arrow-right);
