feat: add footer styles, change styles folders structure

--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,5 +1,7 @@
-@import './styles/reset.scss';
-@import './styles/fonts.scss';
-@import './styles/themes.scss';
-@import './styles/variables.scss';
-@import './styles/mixins.scss';
+@import './styles/commons/reset.scss';
+@import './styles/commons/fonts.scss';
+@import './styles/commons/themes.scss';
+@import './styles/commons/variables.scss';
+@import './styles/commons/mixins.scss';
+
+@import './styles/blocks/footer.scss';
