refactor: border value to variable

--- a/front-end/src/styles/blocks/footer.scss
+++ b/front-end/src/styles/blocks/footer.scss
@@ -101,6 +101,6 @@
     width: 0.1rem;
     height: 2.4rem;
     background-color: $c-menu-inactive-link;
-    border-radius: 1rem;
+    border-radius: $small-border-radius;
   }
 }
