--- a/front-end/src/styles/commons/themes.scss
+++ b/front-end/src/styles/commons/themes.scss
@@ -123,6 +123,7 @@ $bg-header-gradient: var(--bg-header-gradient);
 $bg-footer-gradient: var(--bg-footer-gradient);
 
 $bg-icon-github: url(./assets/images/background/icons/icon-github.svg);
+$bg-home-wave: url(./assets/images/background/home/home-wave.svg);
 
 $bg-theme-switcher: var(--bg-theme-switcher);
 $bg-app-logo: var(--bg-app-logo);
@@ -135,8 +136,8 @@ $bg-home-bg-wave: var(--bg-home-bg-wave);
 $bg-home-bg-1: var(--bg-home-bg-1);
 $bg-home-bg-2: var(--bg-home-bg-2);
 $bg-home-bg-3: var(--bg-home-bg-3);
-$bg-home-bg-blur-1: var(--bg-home-blur-1);
-$bg-home-bg-blur-2: var(--bg-home-blur-2);
+$bg-home-bg-blur-1: var(--bg-home-bg-blur-1);
+$bg-home-bg-blur-2: var(--bg-home-bg-blur-2);
 $bg-lessons-easy: var(--bg-level-easy);
 $bg-lessons-medium: var(--bg-level-medium);
 $bg-lessons-hard: var(--bg-lessons-hard);
