--- a/front-end/src/styles/commons/fonts.scss
+++ b/front-end/src/styles/commons/fonts.scss
@@ -16,9 +16,8 @@
 
 @font-face {
   font-family: "Nunito";
-  src: 
-  url("./assets/fonts/Nunito-ExtraBold.ttf") format("ttf"),
-  url("./assets/fonts/Nunito-ExtraBold.woff2") format("woff2"),
-    url("./assets/fonts/Nunito-ExtraBold.woff") format("woff");
+  src: url("./assets/fonts/Nunito-ExtraBold.woff2") format("woff2"),
+    url("./assets/fonts/Nunito-ExtraBold.woff") format("woff"),     
+    url("./assets/fonts/Nunito-ExtraBold.ttf") format("ttf");
   font-weight: 800;
 }
