--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -1,6 +1,3 @@
-@import './variables.scss';
-@import './themes.scss';
-
 @mixin interaction-effects {
   cursor: pointer;
   transition: $transition-time;
@@ -11,15 +8,21 @@
 }
 
 @mixin desktop-small {
-  @media (max-width: 1079px) { @content; }
+  @media (max-width: 1079px) {
+    @content;
+  }
 }
 
 @mixin tablet {
-  @media (max-width: 899px) { @content; }
+  @media (max-width: 899px) {
+    @content;
+  }
 }
 
 @mixin mobile {
-  @media (max-width: 599px) { @content; }
+  @media (max-width: 599px) {
+    @content;
+  }
 }
 
 
@@ -27,9 +30,9 @@
   width: 24rem;
   height: 5rem;
   border-radius: $small-border-radius;
-  
+
   font-size: 2rem;
-  font-weight: $fw-bold; 
+  font-weight: $fw-bold;
 
   color: white;
   background-color: $c-accent;
@@ -39,9 +42,11 @@
   &:hover {
     background-color: $c-big-btn-hover;
   }
+
   &:active {
     background-color: $c-big-btn-active;
   }
+
   &:disabled {
     background-color: $c-big-btn-disabled;
   }
@@ -65,7 +70,7 @@
   font-weight: $fw-extrabold;
 }
 
-@mixin font-title  {
+@mixin font-title {
   font-size: 3.2rem;
   font-weight: $fw-bold;
 }
@@ -81,4 +86,4 @@
 
 @mixin font-subtitle-mobile {
   font-size: 2rem;
-} 
+}
