--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -6,5 +6,6 @@
 @import './styles/common/reset.scss';
 
 // Layout
+@import './styles/blocks/header.scss';
 @import './styles/blocks/footer.scss';
 @import './styles/blocks/home.scss';
