--- a/front-end/src/styles/blocks/header.scss
+++ b/front-end/src/styles/blocks/header.scss
@@ -9,8 +9,9 @@
 }
 
 $desktop-width: 144rem;
-$big-margin: 8rem;
-$medium-margin: 5rem;
+$desktop-margin: 8rem;
+$tablet-margin: 5rem;
+$mobile-margin: 1.6rem;
 
 .small-btn {
   @include font-main;
@@ -28,8 +29,16 @@ $medium-margin: 5rem;
   @include default-wrapper;
   justify-content: space-between;
   max-width: $desktop-width;
-  padding: 1.5rem $medium-margin 9.5rem;
+  padding: 1.5rem $desktop-margin 9.5rem;
   margin: 0 auto;
+
+  @include tablet {
+    padding: 1.5rem $tablet-margin 9.5rem;
+  }
+
+  @include mobile {
+    padding: 1.5rem $mobile-margin 9.5rem;
+  }
 }
 
 .app-btn {
@@ -38,7 +47,15 @@ $medium-margin: 5rem;
   width: 11.4rem;
   height: 4.1rem;
   background-image: $bg-app-logo;
-  margin-right: $big-margin;
+  margin-right: $desktop-margin;
+
+  @include desktop-small {
+    margin-right: $tablet-margin;
+  }
+
+  @include tablet {
+    margin-right: 0;
+  }
 }
 
 .app-logo {
@@ -52,6 +69,10 @@ $medium-margin: 5rem;
 .menu {
   @include default-wrapper;
   gap: 3rem;
+
+  @include tablet {
+    display: none;
+  }
 }
 
 .menu-btn {
@@ -88,6 +109,10 @@ $medium-margin: 5rem;
 .theme-lang-wrapper {
   @include default-wrapper;
   gap: 2rem;
+
+  @include tablet {
+    gap: 3rem;
+  }
 }
 
 .theme-btn {
@@ -97,17 +122,27 @@ $medium-margin: 5rem;
 
 .registration-btn {
   width: 10rem;
-  margin-left: $big-margin;
+  margin-left: 6rem;
 
   @include desktop-small {
-    margin-left: $medium-margin;
+    margin-left: $tablet-margin;
+  }
+
+  @include tablet {
+    display: none;
   }
 }
 
 .burger-menu-btn {
+  @include interaction-effects;
+  @include btn-bg;
+  width: 2.4rem;
+  height: 1.8rem;
+  background-image: $bg-icon-burger-menu;
+  margin-left: 2.4rem;
   display: none;
 
-  @include mobile {
+  @include tablet {
     display: block;
   }
 }
