fix: change btns handlers & adjust styles

--- a/front-end/src/styles/blocks/games.scss
+++ b/front-end/src/styles/blocks/games.scss
@@ -4,7 +4,7 @@
   row-gap: 3rem;
   max-width: 110rem;
   padding: 0 5rem;
-  margin: 4rem auto;
+  margin: 0 auto 4rem;
 
   @include mobile {
     padding: 0 1.6rem;
