--- a/front-end/src/styles/common/variables.scss
+++ b/front-end/src/styles/common/variables.scss
@@ -6,3 +6,14 @@ $big-border-radius: 2rem;
 $fw-regular: 400;
 $fw-bold: 700;
 $fw-extrabold: 800;
+
+$desktop-width: 144rem;
+$desktop-small-width: 1079px;
+$tablet-width: 899px;
+$mobile-width: 599px;
+
+$desktop-margin: 8rem;
+$tablet-margin: 5rem;
+$mobile-margin: 1.6rem;
+
+$modal-z-index: 10;
