--- a/front-end/src/styles/common/default.scss
+++ b/front-end/src/styles/common/default.scss
@@ -3,6 +3,50 @@
   display: flex;
   flex-direction: column;
   background-color: $c-body-bg;
+  overflow: hidden;
+}
+
+.small-btn {
+  @include font-main;
+  @include interaction-effects;
+  @include small-btn-bg;
+  display: block;
+  width: 4rem;
+  height: 4rem;
+  color: $c-main-text;
+  padding: 1rem;
+  border-radius: $small-border-radius;
+}
+
+.small-btn-bg {
+  background-color: $c-small-btn-bg;
+}
+
+.close-btn {
+  @include small-btn-bg;
+  background-image: $bg-close;
+
+  &:hover {
+    background-image: $bg-close-hover;
+  }
+}
+
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: $modal-z-index;
+}
+
+.overlay {
+  height: 100vh;
+  background: $c-bg-modal-overlay;
+}
+
+.not-scrollable {
+  overflow: hidden;
 }
 
 .big-btn {
