--- a/front-end/src/styles/common/mixins.scss
+++ b/front-end/src/styles/common/mixins.scss
@@ -8,23 +8,32 @@
 }
 
 @mixin desktop-small {
-  @media (max-width: 1079px) {
+  @media (max-width: $desktop-small-width) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media (max-width: 899px) {
+  @media (max-width: $tablet-width) {
     @content;
   }
 }
 
 @mixin mobile {
-  @media (max-width: 599px) {
+  @media (max-width: $mobile-width) {
     @content;
   }
 }
 
+@mixin default-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+@mixin small-btn-bg {
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
 @mixin big-btn {
   width: 24rem;
