--- a/front-end/src/styles/common/reset.scss
+++ b/front-end/src/styles/common/reset.scss
@@ -19,6 +19,7 @@ html {
 
 button,
 input {
+  @include interaction-effects;
   font-family: inherit;
   background-color: transparent;
   outline: none;
