--- a/front-end/src/styles/common/default.scss
+++ b/front-end/src/styles/common/default.scss
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   background-color: $c-body-bg;
-  overflow: hidden;
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 .small-btn {
